resolved skip link contrast issues

--- a/client/scss/components/_skiplink.scss
+++ b/client/scss/components/_skiplink.scss
@@ -11,6 +11,7 @@
 
   &.button {
     background: theme('colors.positive.100');
+    color: theme('colors.black.DEFAULT');
     border: theme('colors.positive.100');
   }
 }
